# MachineLearningCourse

./: .dockerignore  .gitignore  CLAUDE_NOTEBOOK_KONWENCJE.md  Dockerfile  FUNCTION_CALLING_STATUS.md  Function_Calling-Copy1.ipynb  Function_Calling-Copy2.ipynb  Function_Calling-filled_clean.ipynb  Function_Calling.ipynb  Function_Calling_3_parser-Copy1.ipynb  Function_Calling_3_parser-Copy2.ipynb  Function_Calling_3_parser.ipynb  Function_Calling_TEST.ipynb  Function_Calling_TEST_executed.ipynb  Function_Calling_drafts.json  Function_Calling_filled.ipynb  Function_Calling_filled_ful.ipynb  Function_Calling_final.ipynb  Function_Calling_final2.ipynb  Function_Calling_final4_chat_pass.ipynb  Function_Calling_final4_parser.ipynb  Function_Calling_warsztat.ipynb  Model_Języka_polskie_nazwy_miast-plain.ipynb  Model_Języka_polskie_nazwy_miast.ipynb  Model_Języka_polskie_nazwy_miast_pytorch.ipynb  NLP_filled.ipynb  RAG_warsztat.ipynb  README.md  Regresja_liniowa.ipynb  Regresja_liniowa_rozszerzona.ipynb  Reprezentacja_tekstu-Copy1.ipynb  Reprezentacja_tekstu.ipynb  Sieć_Neuronowa.ipynb  Sieć_Neuronowa.ipynb  Sieć_Neuronowa_pytorch.ipynb  _build_fc_notebook.py  _build_fc_notebook_v2.py  _compare_notebooks.py  _fc_cells.json  _rag_smart_search_notes.py  (+24 more)
._odp/: Function_Calling_ODPOWIEDZI.ipynb  Model_Języka_polskie_nazwy_miast_ODPOWIEDZI.ipynb  RAG_warsztat_ODPOWIEDZI.ipynb  Regresja_liniowa_ODPOWIEDZI.ipynb  Regresja_liniowa_rozszerzona_ODPOWIEDZI.ipynb  Regresja_logistyczna_ODPOWIEDZI.ipynb  Reprezentacja_tekstu_ODPOWIEDZI.ipynb  Sieć_Neuronowa_ODPOWIEDZI.ipynb
.githooks/: pre-push
.github/workflows/: check-commit-author.yml
docs/: INSTALACJA_DOCKER_DESKTOP.md  LOKALNE_LLM.md  PLAN_A_DOCKER.md  PLAN_A_UV.md  PLAN_B_DOCKER.md  PLAN_B_UV.md  PLAN_C_COLAB.md  RAG_REDESIGN_STATUS.md  SERWER_PROWADZACEGO.md  TEST_LAN_SERVER.md  TEST_PLAYBOOK.md  TODO_ngrok_instructor_server.md  propozycja_prezentacja_function_calling.md  propozycja_prezentacja_reprezentacja_tekstu.md
docs/superpowers/plans/: 2026-05-11-docker-colab-llm-access.md  2026-05-12-rag-workshop-redesign.md
