[project]
name = "machine-learning-course"
version = "1.0.0"
description = "Zajęcia z Uczenia Maszynowego - Python Podyplomowe"
requires-python = "==3.9.*"
dependencies = [
    "tensorflow==2.15",
    "pillow>=9.4.0",
    "pandas>=1.4.1",
    "scikit-learn>=1.0.2",
    "seaborn>=0.13.0",
    "plotly>=5.1.0",
    "pydot>=1.4.2",
    "graphviz>=0.20.3",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.7.0",
    "ipywidgets>=8.1.2",
    "ipykernel",
    "gdown",
    "nltk",
    "spacy",
    "gensim>=4.3.0",
    "svgling>=0.3.1",
    "sentence-transformers",
    "openai",
]
