[project]
name = "machine-learning-course"
version = "1.0.0"
description = "Zajęcia z Uczenia Maszynowego - Python Podyplomowe"
requires-python = ">=3.11,<3.14"
dependencies = [
    # TensorFlow — 2.20+ ma wheels na Python 3.11/3.12/3.13
    "tensorflow>=2.20",

    # Podstawowe ML (minimalne wersje kompatybilne z Python 3.11–3.13)
    "pillow>=9.4.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.0",
    "plotly>=5.1.0",
    "matplotlib>=3.9.2",

    # Wizualizacja grafów (sieci neuronowe)
    # UWAGA: wymaga też systemowego graphviz binary:
    #   macOS: brew install graphviz
    #   Linux: sudo apt-get install graphviz
    #   Windows: https://graphviz.org/download/
    "pydot>=2.0",
    "graphviz>=0.20.3",

    # Jupyter
    "jupyterlab>=4.2.5",
    "ipywidgets>=8.1.2",
    "ipykernel",

    # Narzędzia
    "gdown",
    "packaging",

    # NLP
    "nltk",
    "spacy>=3.8.7",
    "gensim>=4.4.0",
    "svgling>=0.3.1",
    "sentence-transformers",

    # API
    "openai",
]
